# demo-job-monitoring

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  Pipfile  README.md  app.config.toml  config.toml  contributors.txt  pyproject.toml
job_monitoring/: main.css  main.py  runtime.py
job_monitoring/algo/: debug.py  ml.py
job_monitoring/config/: config.py
job_monitoring/pages/: monitoring.md  monitoring.py  root.py
